# gol-gfx

./: Cargo.toml  README.md
shaders/: rect_150.glslf  rect_150.glslv
src/: main.rs
